[package]
name = "matset"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
# serde_json = { version = "1.0.138", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
wasm-minimal-protocol = "0.1.0"
anyhow = { version = "1.0", default-features = false }
bincode = "1.3.3"
